<resources>
    <!--Login page strings-->
    <string name="app_name">CareersSearchEngine</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_details">Forgot details?</string>
    <string name="title">Careers Search Engine</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <!--#########################################################################################-->
    <!--Home page strings-->
    <string name="welcome_message">Welcome </string>
    <string name="take_the_quiz">Take the quiz</string>
    <string name="see_results">See results</string>
    <string name="suggested_careers">Suggested careers</string>
    <string name="favourites_list">Favourites list</string>
    <!--#########################################################################################-->
    <!--Personality quiz questions-->
    <string name="question_num">1</string>
    <string name="total_num_questions">/15</string>
    <string name="question_instructions">Rate each statement according to how well it describes you.</string>
    <string name="example_question">I prefer variety to routine. </string>
    <string name="strongly_agree">Strongly agree</string>
    <string name="agree">Agree</string>
    <string name="neutral">Neutral</string>
    <string name="disagree">Disagree</string>
    <string name="strongly_disagree">Strongly disagree</string>
    <string name="prev_question">Previous</string>
    <string name="submit_answer">Submit</string>
    <string name="see_results_btn">See quiz results!</string>
    <!--#########################################################################################-->
    <!--Personality results strings-->
    <!--Personality types-->
    <string name="conscientiousness">Conscientiousness</string>
    <string name="agreeableness">Agreeableness</string>
    <string name="neuroticism">Neuroticism</string>
    <string name="openness">Openness</string>
    <string name="extroversion">Extroversion</string>
    <string name="instructions_results">Click trait for details.</string>
    <string name="personality_results_title">Personality trait score:</string>
    <string name="close_btn">Close</string>
    <string name="see_career_area_matches">Career\n matches</string>
    <!--Explanations of traits-->
    <string name="C_explain">Conscientiousness: \n A personality trait that includes reflection,
        deep thinking and individuals who like to set goals. People who score lower on this trait
        prefer not to plan out all their activities and are less mindful of deadlines.</string>

    <string name="E_explain">Extroversion: \n This describes an excitable individual in social
        situations and displays more assertive behaviours, especially in group interactions.
        On the contrary, scoring low in this trait describes a person who finds social interactions
        tiresome and reserved in group settings.</string>

    <string name="A_explain">Agreeableness: \n An individual who displays a range of pro-social
        behaviour such as trustworthiness. People scoring high in this trait tend to perform more
        altruistic tasks and display more significant levels of kindness to others. Scoring low in
        this category describes individuals who are more competitive and egotistic.
</string>
    <string name="O_explain">Openness: \n Being imaginative and curious about exploring new ideas.
        People scoring high on this trait tend to be eager to learn new skills and have new experiences.
        Individuals scoring lower on this trait tend to prefer tradition and value concrete ideas
        over abstract.
</string>
    <string name="N_explain">Neuroticism: \n Scoring highly on this trait describes an individual
        who may experience frequent mood changes, feel higher levels of anxiety and someone who can
        become irritated quickly. People who score lower in this trait are thought of as more
        consistent in their mood and have stronger resilience to negativity.
</string>
    <!--#########################################################################################-->

    <!--Favourites list-->
    <string name="favourites_header">Favourites List</string>
    <!--#########################################################################################-->

    <!--Career area matches-->
    <string name="spinner_text">Filter</string>
    <string name="job_matches">Jobs:</string>
    <string name="top_three_title">Top 3 area matches:</string>
    <string name="top_match">1. </string>
    <string name="second_match">2. </string>
    <string name="third_match">3. </string>
    <string name="percent">%</string>
    <string name="filter">Filter by</string>
    <!--#########################################################################################-->

    <!--Job search info-->
    <string name="job_description">Description:</string>
    <string name="job_avg_salary">Average salary (UK):</string>
    <string name="job_search_link">Search for jobs:</string>
    <string name="job_location">Enter location</string>
    <string name="job_min_salary">Enter min. salary</string>
    <string name="add_to_favs_list">Add to favourites list</string>
    <string name="job_search_btn">search</string>
    <string name="return_favs_list">Favourites list</string>

    <!--#########################################################################################-->

    <!--Sign up-->
    <string name="sign_up_title">Sign up</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_email_add">Enter email address</string>
    <string name="enter_password2">Enter a password</string>
    <string name="retype_password">Retype password</string>
    <!--#########################################################################################-->

    <!--Search results-->
    <string name="career_matches_return">Career matches</string>
    <!--#########################################################################################-->


</resources>