<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.stu.careers_search_engine.SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <ImageView
            android:id="@+id/IMG_main_logo"
            android:src="@drawable/main_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"

            />

        <TextView
            android:text="@string/sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/IMG_main_logo"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="30sp"
            >

        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/ET_username"
            android:hint="@string/enter_username"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"

            />

        <EditText
            android:id="@+id/ET_email_add"
            android:hint="@string/enter_email_add"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"/>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/ET_password"
            android:hint="@string/enter_password2"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:inputType="textPassword"

            />

        <EditText
            android:id="@+id/ET_retype_password"
            android:hint="@string/retype_password"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:inputType="textPassword"/>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_marginTop="2dp">
        <Button
            android:id="@+id/BTN_sign_up"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:layout_alignParentTop="true"
            />




    </RelativeLayout>

</LinearLayout>