<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:id="@+id/home_layout"
    tools:context="com.stu.careers_search_engine.Home"
    android:background="@color/white">

    <!-- Test comments for gitHub -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >
    <ImageView
        android:id="@+id/IMG_home_logo"
        android:src="@drawable/home_logo"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        />

        <Spinner
            android:id="@+id/SP_home_spinner"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/settings_logo"

            />


        <TextView
            android:id="@+id/TV_welcome_message"
            android:text="@string/welcome_message"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
            android:layout_below="@+id/IMG_home_logo"
            android:layout_marginTop="5dp"
            android:textStyle="bold"

            android:textSize="30sp"/>
        <TextView
            android:id="@+id/TV_username"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_welcome_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:textStyle="bold"

            android:textSize="30sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="15dp"

        >
        <Button
            android:id="@+id/BTN_take_quiz"
            android:text="@string/take_the_quiz"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/color_two"
            android:drawableRight="@drawable/question_resize"
            />


        <Button
            android:id="@+id/BTN_quiz_results"
            android:background="@color/color_two"
            android:text="@string/see_results"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/BTN_take_quiz"
            android:layout_marginTop="25dp"
            android:drawableEnd="@drawable/results_resize"

            />
        <Button
            android:id="@+id/BTN_suggested_careers"
            android:text="@string/suggested_careers"
            android:drawableEnd="@drawable/suggested_resize"
            android:background="@color/color_two"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/BTN_quiz_results"
            android:layout_marginTop="25dp"/>
        <Button
            android:id="@+id/BTN_favourites"
            android:text="@string/favourites_list"
            android:background="@color/color_two"
            android:drawableEnd="@drawable/favourites_resize"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/BTN_suggested_careers"
            android:layout_marginTop="25dp"/>
    </RelativeLayout>

</LinearLayout>