<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        tools:context="com.stu.careers_search_engine.DisplayJobInfo"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/IMG_careerMatch_logo_jobs_display"
                android:src="@drawable/main_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/title_data"
            android:background="@drawable/border"
            android:layout_marginTop="5dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_description"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/TV_description"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_avg_salary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/TV_salary"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_search_link"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <EditText
            android:id="@+id/ET_location"
            android:background="@drawable/border"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_location"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/ET_min_salary"
            android:background="@drawable/border"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_min_salary"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:id="@+id/BTN_search_jobs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/job_search_btn"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="5dp">


            <TextView
                android:id="@+id/TV_add_fav"
                android:text="@string/add_to_favs_list"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/SW_add_to_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/NAV_BAR_job_data"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/color_two">

            <ImageView
                android:id="@+id/IMG_home_logo_job_data"
                android:src="@drawable/home_logo"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                />

            <ImageView
                android:id="@+id/IMG_favs_job_data"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:src="@drawable/favourites_resize"
                android:padding="2dp"/>
            <ImageView
                android:id="@+id/IMG_career_match_job_data"
                android:src="@drawable/suggested_resize"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:padding="2dp"/>


        </RelativeLayout>






    </LinearLayout>

</ScrollView>
